--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab</title>
+    <script src="index.js"></script>
   </head>
   <body>
     <input style="width: 50px" readonly />
@@ -11,27 +12,27 @@
     <input style="width: 50px" readonly />
     =
     <input style="width: 50px" readonly />
-    <button>?</button>
+    <button id="generateButton">?</button>
     <input style="width: 100px" readonly />
     <table>
       <tr>
-        <td><button>1</button></td>
-        <td><button>3</button></td>
-        <td><button>5</button></td>
-        <td><button>7</button></td>
+        <td><button class="numberButton">1</button></td>
+        <td><button class="numberButton">3</button></td>
+        <td><button class="numberButton">5</button></td>
+        <td><button class="numberButton">7</button></td>
       </tr>
       <tr>
-        <td><button>2</button></td>
-        <td><button>4</button></td>
-        <td><button>6</button></td>
-        <td><button>0</button></td>
+        <td><button class="numberButton">2</button></td>
+        <td><button class="numberButton">4</button></td>
+        <td><button class="numberButton">6</button></td>
+        <td><button class="numberButton">0</button></td>
       </tr>
       <tr>
         <td colspan="2">
-          <button style="width: 100%">Ok</button>
+          <button style="width: 100%" id="okButton">Ok</button>
         </td>
         <td colspan="2">
-          <button style="width: 100%">reset</button>
+          <button style="width: 100%" id="resetButton">reset</button>
         </td>
       </tr>
     </table>
