--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <table>
       <tr>
         <td colspan="4">
-          <div style="display: flex; justify-content: center; gap: 5px;">
+          <div style="display: flex; gap: 5px;">
           <input  readonly />
           <input  readonly />
           <input  readonly />
