--- a/index.html
+++ b/index.html
@@ -1,65 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab</title>
-    <script src="index.js"></script>
-  </head>
-  <style>
-    table {
-      table-layout: fixed;
-      width: 150px;
-    }
-    button {
-      width: 100%;
-    }
-    input {
-      width: 100%;
-      box-sizing: border-box;
-      text-align: center;
-    }
-  </style>
-  <body>
-    <table>
-      <tr>
-        <td colspan="4">
-          <div style="display: flex; gap: 5px;">
-          <input  readonly />
-          <input  readonly />
-          <input  readonly />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lab</title>
+  <script src="index.js"></script>
+</head>
+<style>
+  table {
+    table-layout: fixed;
+    width: 350px;
+  }
+
+  button {
+    width: 100%;
+  }
+
+  input {
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  select {
+    width: 100%;
+    text-align: center;
+  }
+</style>
+
+<body>
+  <table>
+    <tr>
+      <td colspan="4">
+        <select id="numberSystem">
+          <option value="2">2 number system</option>
+          <option value="4">4 number system</option>
+          <option value="8" selected="selected">8 number system</option>
+          <option value="16">16 number system</option>
+        </select>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <div style="display: flex; gap: 5px;">
+          <input readonly />
+          <input readonly />
+          <input readonly />
           =
           <input readonly />
-        </td>
-      </tr>
-      <tr>
-        <td><button class="numberButton">1</button></td>
-        <td><button class="numberButton">3</button></td>
-        <td><button class="numberButton">5</button></td>
-        <td><button class="numberButton">7</button></td>
-      </tr>
-      <tr>
-        <td><button class="numberButton">2</button></td>
-        <td><button class="numberButton">4</button></td>
-        <td><button class="numberButton">6</button></td>
-        <td><button class="numberButton">0</button></td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <button style="width: 100%" id="checkButton">Сheck</button>
-        </td>
-        <td colspan="2">
-          <button style="width: 100%" id="resetButton">Reset</button>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="4"><button id="generateButton">Generate</button></td>
-      </tr>
-      <tr>
-        <td colspan="4">
-          <input readonly />
-        </td>
-      </tr>
-    </table>
-  </body>
+      </td>
+    </tr>
+    <tr>
+      <td><button class="numberButton">0</button></td>
+      <td><button class="numberButton">1</button></td>
+      <td><button class="numberButton">2</button></td>
+      <td><button class="numberButton">3</button></td>
+    </tr>
+    <tr>
+      <td><button class="numberButton">4</button></td>
+      <td><button class="numberButton">5</button></td>
+      <td><button class="numberButton">6</button></td>
+      <td><button class="numberButton">7</button></td>
+    </tr>
+    <tr>
+      <td><button class="numberButton">8</button></td>
+      <td><button class="numberButton">9</button></td>
+      <td><button class="numberButton">A</button></td>
+      <td><button class="numberButton">B</button></td>
+    </tr>
+    <tr>
+      <td><button class="numberButton">C</button></td>
+      <td><button class="numberButton">D</button></td>
+      <td><button class="numberButton">E</button></td>
+      <td><button class="numberButton">F</button></td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <button style="width: 100%" id="checkButton">Сheck</button>
+      </td>
+      <td colspan="2">
+        <button style="width: 100%" id="resetButton">Reset</button>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="4"><button id="generateButton">Generate</button></td>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <input readonly />
+      </td>
+    </tr>
+  </table>
+</body>
+
 </html>
