--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
     <tr>
       <td><button class="numberButton">8</button></td>
       <td><button class="numberButton">9</button></td>
-      <td><button class="numberButton">A</button></td>
-      <td><button class="numberButton">B</button></td>
+      <td><button class="numberButton">a</button></td>
+      <td><button class="numberButton">b</button></td>
     </tr>
     <tr>
-      <td><button class="numberButton">C</button></td>
-      <td><button class="numberButton">D</button></td>
-      <td><button class="numberButton">E</button></td>
-      <td><button class="numberButton">F</button></td>
+      <td><button class="numberButton">c</button></td>
+      <td><button class="numberButton">d</button></td>
+      <td><button class="numberButton">e</button></td>
+      <td><button class="numberButton">f</button></td>
     </tr>
     <tr>
       <td colspan="2">
