Добавлена возможность с выбором максимально генерируемого числа

--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
 <body>
   <table>
     <tr>
-      <td colspan="4">
+      <td colspan="2">
         <select id="numberSystem">
           <option value="2">2 number system</option>
           <option value="4">4 number system</option>
           <option value="8" selected="selected">8 number system</option>
           <option value="16">16 number system</option>
+        </select>
+      </td>
+      <td colspan="2">
+        <select id="maximumNumber">
+          <option value="16">max num 16</option>
+          <option value="64" selected="selected">max num 64</option>
+          <option value="256">max num 256</option>
         </select>
       </td>
     </tr>
