Сделали отчиску таблицы

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             </td>
           </tr>
           <tr>
-            <td colspan="4"><button id="generateButton">Generate</button></td>
+            <td colspan="2"><button id="generateButton">Generate</button></td>
+            <td colspan="2"><button id="clearHistory">Clear</button></td>
           </tr>
           <tr>
             <td colspan="4">
